--- a/templates/project/screen.scss
+++ b/templates/project/screen.scss
@@ -11,7 +11,6 @@
 @import "base/color-pallet";
 @import "base/typography-pallet";
 @import "base/settings";
-@import "base/typography";
 @import "base/page";
 @import "base/structure-units";
 @import "base/skin-units";
@@ -32,6 +31,7 @@
 /**
  * Components
  */
+@import "components/typography";
 @import "components/lists";
 @import "components/tables";
 @import "components/links";
