update docs output-site

--- a/docs/output-site/components/figures.html
+++ b/docs/output-site/components/figures.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Typography</title>
+    <title>Figures</title>
     
     <link rel="stylesheet" href="../css/screen.css" media="screen">
 </head>
@@ -68,7 +68,28 @@
   </nav>   
 
   <div class="page">
-    <h1 id="typography">Typography</h1>
+    <section class="copy">
+<h1 id="figures">Figures</h1>
+<p>Use an <code>&lt;img&gt;</code>, <code>&lt;video&gt;</code> or <code>&lt;table&gt;</code> as content for the <code>&lt;figure&gt;</code> element.</p>
+<figure>
+  
+<img src="http://placehold.it/150x150/666666/333333.png&text=Figure Img" width="150" height="150" />
+<figcaption>
+<a href="#" title="Example Figure Caption">Example Figure Caption</a> by Jon Doe
+</figcaption>   
+</figure>
+
+<figure>
+  
+<img src="http://placehold.it/180x150/666666/333333.png&text=180x150" alt="">
+<figcaption>
+Nulla vitae elit libero, a pharetra augue. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Etiam porta sem malesuada magna mollis euismod. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Sed posuere consectetur est at lobortis. Aenean lacinia bibendum nulla sed consectetur.
+</figcaption>
+</figure> 
+
+
+</section>
+
 
   </div>
   
