--- a/docs/output-site/components/media.html
+++ b/docs/output-site/components/media.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Typography</title>
+    <title>Media</title>
     
     <link rel="stylesheet" href="../css/screen.css" media="screen">
 </head>
@@ -68,7 +68,21 @@
   </nav>   
 
   <div class="page">
-    <h1 id="typography">Typography</h1>
+    <section class="copy">
+<h1 id="media">Media</h1>
+<div class="media">
+  <div class="body">
+    <p>
+this is the body text of a media object...Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nullam id dolor id nibh ultricies vehicula ut id elit. Nullam quis risus eget urna mollis ornare vel eu leo. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+</p>
+    
+<img src="http://placehold.it/180x150/666666/333333.png&text=180x150" width="180" height="150" class="right"/>
+</div>
+</div>
+
+
+</section>
+
 
   </div>
   
