--- a/docs/output-site/components/code.html
+++ b/docs/output-site/components/code.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Typography</title>
+    <title>Code</title>
     
     <link rel="stylesheet" href="../css/screen.css" media="screen">
 </head>
@@ -68,7 +68,11 @@
   </nav>   
 
   <div class="page">
-    <h1 id="typography">Typography</h1>
+    <h1 id="code">Code</h1>
+<h2 id="inline-code">Inline Code</h2>
+<p>Markup inline code with the <code>&lt;code&gt;</code> element.</p>
+<h2 id="code-blocks">Code Blocks</h2>
+<p>Markup code blocks with the <code>&lt;pre&gt;</code> element. Remember all whitespace will be rendered.</p>
 
   </div>
   
