--- a/docs/output-site/components/rules.html
+++ b/docs/output-site/components/rules.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Typography</title>
+    <title>Rules</title>
     
     <link rel="stylesheet" href="../css/screen.css" media="screen">
 </head>
@@ -68,7 +68,35 @@
   </nav>   
 
   <div class="page">
-    <h1 id="typography">Typography</h1>
+    <section class="copy">
+<h1 id="rules">Rules</h1>
+<p>Insert rules description here...</p>
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;hr</span> <span class="na">class=</span><span class="s">&quot;rule&quot;</span><span class="nt">&gt;</span>
+</pre></div>
+
+
+<hr class="rule">
+
+
+<div class="highlight"><pre><a name="project--components--_rules.scss-idio.html-2"></a><span class="cm">/**</span>
+<a name="project--components--_rules.scss-idio.html-3"></a><span class="cm"> * Rules</span>
+<a name="project--components--_rules.scss-idio.html-4"></a><span class="cm"> * </span>
+<a name="project--components--_rules.scss-idio.html-5"></a><span class="cm"> * Horizontal rules are scoped with $main-type-scope which is set in the base/_typography.scss partial</span>
+<a name="project--components--_rules.scss-idio.html-6"></a><span class="cm"> */</span>  
+<a name="project--components--_rules.scss-idio.html-7"></a>
+<a name="project--components--_rules.scss-idio.html-8"></a><span class="nc">.</span><span class="si">#{</span><span class="nv">$main-type-scope</span><span class="si">}</span> <span class="p">{</span>
+<a name="project--components--_rules.scss-idio.html-9"></a>  <span class="nt">hr</span> <span class="p">{</span> 
+<a name="project--components--_rules.scss-idio.html-10"></a>    <span class="na">display</span><span class="o">:</span> <span class="no">block</span><span class="p">;</span> 
+<a name="project--components--_rules.scss-idio.html-11"></a>    <span class="na">border</span><span class="o">:</span> <span class="mi">0</span><span class="p">;</span>
+<a name="project--components--_rules.scss-idio.html-12"></a>    <span class="k">@include</span><span class="nd"> leading-border</span><span class="p">(</span><span class="nv">$copy--hr-width</span><span class="o">,</span> <span class="mf">.5</span><span class="p">);</span>
+<a name="project--components--_rules.scss-idio.html-13"></a>    <span class="na">border-color</span><span class="o">:</span> <span class="nv">$copy--hr-color</span><span class="p">;</span>
+<a name="project--components--_rules.scss-idio.html-14"></a>  <span class="p">}</span>
+<a name="project--components--_rules.scss-idio.html-15"></a><span class="p">}</span>
+</pre></div>
+
+
+</section>
+
 
   </div>
   
