--- a/docs/sass/screen.scss
+++ b/docs/sass/screen.scss
@@ -62,3 +62,15 @@
 //@import "layout/singularity-grid";
 @import "layout/print";
 
+
+/**
+ * Docs
+ */
+@import "docs/settings";
+@import "docs/components";
+@import "docs/fonts";
+//@import "docs/layout";
+@import "docs/pygments.scss";
+@import "docs/singularity-grid";
+
+
