--- a/templates/project/base/_page.scss
+++ b/templates/project/base/_page.scss
@@ -9,7 +9,7 @@
  */
 
 html {
-  font-family: $body-font;                                /* 1 */
+  font-family: $copy--body-font;                          /* 1 */
   -webkit-text-size-adjust: 100%;                         /* 2 */
   -ms-text-size-adjust: 100%;                             /* 2 */
   overflow-y: scroll;
@@ -17,9 +17,9 @@ html {
 }
 
 body {
-  color: $copy--body-text-color;
-  background: $copy--body-bg-color;
-  font-family: $copy--body-text;
+  color: $copy--body-color-txt;
+  background: $copy--body-color-bg;
+  font-family: $copy--body-txt;
   font-weight: normal;
   margin: 0;                                              /* 3 */
   padding: 0;
