--- a/templates/project/base/_structure-units.scss
+++ b/templates/project/base/_structure-units.scss
@@ -7,12 +7,12 @@
 /**
  * Spacers
  */
-$base-spacer-unit: $base-font-size;
+$spacer-unit:                             $base-font-size;
 
-$half-spacer-unit: $base-spacer-unit / 2;
-$third-spacer-unit: $base-spacer-unit / 3;
-$quarter-spacer-unit: $base-spacer-unit / 4;
+$spacer-unit--half:                       $spacer-unit / 2;
+$spacer-unit--third:                      $spacer-unit / 3;
+$spacer-unit--quarter:                    $spacer-unit / 4;
 
-$media--spacer: $half-spacer-unit;
+$spacer-unit--media:                      $spacer-unit--half;
 
 
