update media-object to comply with issue #42

--- a/templates/project/objects/_media-object.scss
+++ b/templates/project/objects/_media-object.scss
@@ -23,12 +23,12 @@
  */
 .media__img--left {                   /* 2 */
   float: left;
-  margin-right: $media--spacer;
+  margin-right: $spacer-unit--media;
 }
 
 .media__img--right {                  /* 2 */
   float: right;
-  margin-left: $media--spacer;
+  margin-left: $spacer-unit--media;
 }
 
 .media__img--left img,
