refactor typography component to comply with issue #42

--- a/templates/project/base/_typography-pallet.scss
+++ b/templates/project/base/_typography-pallet.scss
@@ -89,7 +89,7 @@ $copy--body-font:                     $georgia;
  * Header Text
  */
 $copy--header-color-txt:              black(40);
-$copy--header-text:                   $helvetica;
+$copy--header-txt:                    $helvetica;
 
 /**
  * Header Sizes
