refactor figure component to comply with issue #42

--- a/templates/project/components/_figures.scss
+++ b/templates/project/components/_figures.scss
@@ -8,14 +8,14 @@
   figure {
     margin-bottom: $base-line-height;
     img {
-      margin-bottom: $quarter-spacer-unit;
+      margin-bottom: $spacer-unit--quarter;
     }
     figcaption {
       display: block;
       font-weight: normal;
       font-size: ms(-1);
       color: $subtle-color--txt;
-      font-family: $copy--body-text;
+      font-family: $copy--body-txt;
     }
   }
 }
