refactor quotes component to comply with issue #42

--- a/templates/project/base/_typography-pallet.scss
+++ b/templates/project/base/_typography-pallet.scss
@@ -120,7 +120,7 @@ $copy--body-color-bg:                 $white !default;
 $copy--body-color-txt:                black(30) !default;
 $copy--accent-color-txt:              $accent-color--txt;
 $copy--body-txt:                      $georgia;
-$copy--accent-text:                   $helvetica;
+$copy--accent-txt:                    $helvetica;
 
 /**
  * Paragraph Lead
