--- a/templates/project/components/_quotes.scss
+++ b/templates/project/components/_quotes.scss
@@ -9,7 +9,7 @@
 
 .#{$main-type-scope} {
   blockquote {
-    font-family: $copy--accent-text;
+    font-family: $copy--accent-txt;
     margin: $base-line-height;
     color: $subtle-color--txt;
     font-style: italic; 
