--- a/templates/project/components/_lists.scss
+++ b/templates/project/components/_lists.scss
@@ -7,10 +7,10 @@
 /**
  * List Variables
  */
-$list-padding: 0 0 0 $base-line-height *2;
-$list-margin: 0 auto rhythm(1);
-$ul-style-type: disc;
-$ol-style-type: decimal;
+$list--padding: 0 0 0 $base-line-height *2;
+$list--margin: 0 auto rhythm(1);
+$list--ul-style: disc;
+$list--ol-style: decimal;
 
 /**
  * List Styles
@@ -18,25 +18,25 @@ $ol-style-type: decimal;
  */
 li ul,
 li ol {
-  margin: $list-margin;
+  margin: $list--margin;
 }
 
 ul,
 ol {
   margin: 0 auto rhythm(1);
-  padding: $list-padding;                   
+  padding: $list--padding;                   
 }
 
 ul {
-  list-style-type: $ul-style-type;
+  list-style-type: $list--ul-style;
 }
 
 ol {
-  list-style-type: $ol-style-type;
+  list-style-type: $list--ol-style;
 }
 
 dl {
-  margin: $list-margin;
+  margin: $list--margin;
 }
 
 dl dt {
@@ -44,7 +44,7 @@ dl dt {
 }
 
 dd {
-  margin: $list-margin;
+  margin: $list--margin;
   margin-left: $base-line-height * 2;
 }
 
