--- a/templates/project/base/_color-pallet.scss
+++ b/templates/project/base/_color-pallet.scss
@@ -85,7 +85,7 @@ $muted-color--bg:                   $muted;
  */
 $primary-color:                     $subtle;   //#2ba6cb !default;
 $secondary-color:                   $muted;    //#e9e9e9 !default;
-//$tertiary-color: 
+$tertiary-color:                    $blue-green--tint-1;
 $accent-color:                      $accent;
 
 $warning-color:                     #fCF8E3 !default;
