--- a/docs/sass/objects/_nav-object.scss
+++ b/docs/sass/objects/_nav-object.scss
@@ -1,3 +1,21 @@
+/*** @export "nav-object" css */
+/**
+ * Nav Object
+ *
+ * csswizardry.com/2011/09/the-nav-abstraction
+ */
+.nav {
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  @extend %cf;
+  & > li{
+    &,
+    & > a{
+      display:inline-block;
+    }
+  }
+}
 
 /**
  * Nav Sub-Objects
