--- a/docs/output-site/components/typography.html
+++ b/docs/output-site/components/typography.html
@@ -68,7 +68,115 @@
   </nav>   
 
   <div class="page">
-    <h1 id="typography">Typography</h1>
+    <section class="copy">
+
+<h1 id="typography">Typography</h1>
+<p class="lead">
+All typographical elements are styled with rhythm-unit variables establishing consistency and allowing for easy customization. The typography partial is responsible for styling headings, paragraphs, lists, and inline elements.
+</p>
+<hr>
+
+<h2 id="vertical-rhythm">Vertical Rhythm</h2>
+<hr>
+
+<p>Vertical rhythm in Archetype is maintained by setting the <code><span class="math"><em>b</em><em>a</em><em>s</em><em>e</em> − <em>f</em><em>o</em><em>n</em><em>t</em> − <em>s</em><em>i</em><em>z</em><em>e</em> &lt;  / <em>c</em><em>o</em><em>d</em><em>e</em> &gt; , <em>a</em><em>n</em><em>d</em> &lt; <em>c</em><em>o</em><em>d</em><em>e</em> &gt; </span>base-line-height</code> Compass variables and then including the <code>establish-baseline</code> mixin in the Archetype <code>_settings.scss</code> partial. More information on all the vertical rhythm mixins are available in the <a href="http://compass-style.org/reference/compass/typography/vertical_rhythm">Compass Docs</a>. The default vertical rhythm settings are as follow:</p>
+<h2 id="headings">Headings</h2>
+<hr>
+<h1>
+Level One Heading
+</h1>
+<h2>
+Level Two Heading
+</h2>
+<h3>
+Level Three Heading
+</h3>
+<h4>
+Level Four Heading
+</h4>
+<h5>
+Level Five Heading
+</h5>
+<h6>
+Level Six Heading
+</h6>
+
+
+<h2 id="sub-headings">Sub-Headings</h2>
+<hr>
+<h1 class="subheader">
+Level One Sub-Heading
+</h1>
+<h2 class="subheader">
+Level Two Sub-Heading
+</h2>
+<h3 class="subheader">
+Level Three Sub-Heading
+</h3>
+<h4 class="subheader">
+Level Four Sub-Heading
+</h4>
+<h5 class="subheader">
+Level Five Sub-Heading
+</h5>
+<h6 class="subheader">
+Level Six Sub-Heading
+</h6>
+
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;h1</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level One Sub-Heading<span class="nt">&lt;/h1&gt;</span>
+<a name="l-2"></a><span class="nt">&lt;h2</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level Two Sub-Heading<span class="nt">&lt;/h2&gt;</span>
+<a name="l-3"></a><span class="nt">&lt;h3</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level Three Sub-Heading<span class="nt">&lt;/h3&gt;</span>
+<a name="l-4"></a><span class="nt">&lt;h4</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level Four Sub-Heading<span class="nt">&lt;/h4&gt;</span>
+<a name="l-5"></a><span class="nt">&lt;h5</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level Five Sub-Heading<span class="nt">&lt;/h5&gt;</span>
+<a name="l-6"></a><span class="nt">&lt;h6</span> <span class="na">class=</span><span class="s">&quot;subheader&quot;</span><span class="nt">&gt;</span>Level Six Sub-Heading<span class="nt">&lt;/h6&gt;</span>
+</pre></div>
+
+
+<h2 id="lead-paragraph">Lead Paragraph</h2>
+<hr>
+<p class="lead">
+This is a lead paragraph... Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+</p>
+
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">&quot;lead&quot;</span><span class="nt">&gt;</span>This is a lead paragraph... Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.<span class="nt">&lt;/p&gt;</span>
+</pre></div>
+
+
+<h2 id="body-paragraph">Body Paragraph</h2>
+<hr>
+<p>
+This is a paragraph. It uses the base line height and font by default. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+</p>
+
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;p&gt;</span>This is a paragraph.  It uses the base line height and font by default. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras mattis consectetur purus sit amet fermentum. Donec id elit non mi porta gravida at eget metus. Nullam quis risus eget urna mollis ornare vel eu leo. Nullam quis risus eget urna mollis ornare vel eu leo. Donec sed odio dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit.<span class="nt">&lt;/p&gt;</span>
+</pre></div>
+
+
+<h2 id="muted-paragraphy">Muted Paragraphy</h2>
+<hr>
+<p class="muted">
+This is a muted paragraph... Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
+</p>
+
+<div class="highlight"><pre><a name="l-1"></a><span class="nt">&lt;p</span> <span class="na">class=</span><span class="s">&quot;muted&quot;</span><span class="nt">&gt;</span>This is a muted paragraph... Nulla vitae elit libero, a pharetra augue. Donec id elit non mi porta gravida at eget metus. Curabitur blandit tempus porttitor. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.<span class="nt">&lt;/p&gt;</span>
+</pre></div>
+
+
+
+<h2 id="contextual-emphasis">Contextual Emphasis</h2>
+<hr>
+
+<h3 id="strong-emphasis">Strong, emphasis,</h3>
+Inline contextual emphasis can be applied with the <code>&lt;strong&gt;</code> and <code>&lt;em&gt;</code> tags.
+<p>
+<strong>This is the strong element</strong> lorem ipsum dolor sit amet, consectetur adipiscing elit. <em>This is emphasized</em> donec id elit non mi porta gravida at eget metus.
+</p>
+
+
+</div>
+
+</section>
+
 
   </div>
   
