--- a/docs/output-site/components/labels.html
+++ b/docs/output-site/components/labels.html
@@ -181,7 +181,8 @@ Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
