--- a/docs/includes/_footer.html
+++ b/docs/includes/_footer.html
@@ -4,5 +4,6 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
