--- a/docs/output-site/components/alerts.html
+++ b/docs/output-site/components/alerts.html
@@ -199,7 +199,8 @@ This is a warning alert.<a href="#" class="close">×</a>
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
