--- a/docs/output-site/components/figures.html
+++ b/docs/output-site/components/figures.html
@@ -99,7 +99,8 @@ Nulla vitae elit libero, a pharetra augue. Aenean eu leo quam. Pellentesque orna
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
