--- a/docs/output-site/components/lists.html
+++ b/docs/output-site/components/lists.html
@@ -176,7 +176,8 @@ A definition list — this is &lt;dd&gt; element.
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
