--- a/docs/output-site/components/partitions.html
+++ b/docs/output-site/components/partitions.html
@@ -180,7 +180,8 @@ Here is a primary, large partition
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
