--- a/docs/output-site/components/typography.html
+++ b/docs/output-site/components/typography.html
@@ -186,7 +186,8 @@ Inline contextual emphasis can be applied with the <code>&lt;strong&gt;</code> a
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="/js/vendor/jquery/jquery.min.js"><\/script>')</script>
-<script src="/js/main.js"></script>
+
+<script src="js/main.js"></script>
 
 </body>
 </html>
