update Archetype to include Archetype-Utilities as a dependency

--- a/sass/base/_settings.scss
+++ b/sass/base/_settings.scss
@@ -9,11 +9,11 @@
  * Imports
  *
  * 1. https://github.com/chriseppstein/compass
- * 2. https://github.com/kwaledesign/Archetype
+ * 2. https://github.com/kwaledesign/Archetype-Utilities
  */
 
 @import "compass";                                        /* 1 */
-@import "archetype";                                      /* 2 */
+@import "archetype-utilities";                            /* 2 */
 
 /**
  * Compass
